// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quil to JSON converts all quil programs to a JSON representation correctly 1`] = `
Array [
  Object {
    "matrix": Array [
      Object {
        "expression": "0.5+0.5i",
        "type": "expression",
      },
      Object {
        "expression": "0.5-0.5i",
        "type": "expression",
      },
    ],
    "name": "SQRT-X",
    "type": "defGate",
    "variables": Array [],
  },
  Object {
    "name": "SQRT-X",
    "params": Array [],
    "qubits": Array [
      0,
    ],
    "type": "gate",
  },
]
`;

exports[`Quil to JSON converts all quil programs to a JSON representation correctly 2`] = `
Array [
  Object {
    "field": "BIT",
    "index": 1,
    "register": "ro",
    "type": "memoryDescriptor",
  },
  Object {
    "name": "X",
    "params": Array [],
    "qubits": Array [
      0,
    ],
    "type": "gate",
  },
  Object {
    "address": 0,
    "qubitIndex": 0,
    "type": "measure",
  },
]
`;

exports[`Quil to JSON converts all quil programs to a JSON representation correctly 3`] = `
Array [
  Object {
    "matrix": Array [
      Object {
        "expression": "1.0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
    ],
    "name": "GROVER_ORACLE",
    "type": "defGate",
    "variables": Array [],
  },
  Object {
    "matrix": Array [
      Object {
        "expression": "1.0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
      Object {
        "expression": "0",
        "type": "expression",
      },
    ],
    "name": "HADAMARD_DIFFUSION",
    "type": "defGate",
    "variables": Array [],
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      0,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      1,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "GROVER_ORACLE",
    "params": Array [],
    "qubits": Array [
      0,
      1,
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      1,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      0,
    ],
    "type": "gate",
  },
  Object {
    "name": "HADAMARD_DIFFUSION",
    "params": Array [],
    "qubits": Array [
      0,
      1,
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      0,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      1,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "GROVER_ORACLE",
    "params": Array [],
    "qubits": Array [
      0,
      1,
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      1,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      0,
    ],
    "type": "gate",
  },
  Object {
    "name": "HADAMARD_DIFFUSION",
    "params": Array [],
    "qubits": Array [
      0,
      1,
      2,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      0,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      1,
    ],
    "type": "gate",
  },
  Object {
    "name": "H",
    "params": Array [],
    "qubits": Array [
      2,
    ],
    "type": "gate",
  },
]
`;
